--- a/login.css
+++ b/login.css
@@ -1,118 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap');
 
-* {
+
+*{
     padding: 0;
     margin: 0;
-    font-family:'Georama' ;
+    font-family: 'Ropa Sans';
 }
 
-body{
-    background-image: url(img/8a909882b3c6a2fcba6e1d4a42dabd42.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;  
-    background-attachment: fixed;
-    padding: 5%;
-}
+
+
 .container{
     display: flex;
+    position: relative;
     justify-content: center;
     width: 100%;
     margin-top: 100px;
 }
 
-.card{
-    
-    background-color: #fffff580;
-    padding: 60px;
-    border-radius:4%;
-    box-shadow: 3px 3px 1px 0px #00000060; 
-
+.card_yelow{
+   
+ position:absolute;
+ background-color: #FFC100;
+ padding: 10px 70px 70px 10px;
+ border-radius: 10px;
+ margin-top: 15px;
+ width: 190px;
+ height: 150px;
 }
 
 h1{
-    text-align: center;
-    margin-bottom: 25px;
-    color: #000060;
+    text-align: start;
+    font-size: 30px;
+    margin-top: 40px;
+    margin-left: 15px;
 }
 
-.label-float input{
+hr{
+    text-align: start;
+    width: 80px;
+    border-top: 1px solid black;
+    margin: 20px 9px 20px;
+}
+
+h2{
+    font-size: 18px;
+    margin-left: 15px ;
+    text-align: start;
+}
+
+
+
+.card_transparent{
+ position: absolute;
+ background-color:#00000080;
+ padding: 10px 30px 110px 1px;
+ border-radius: 10px;
+ margin-top: 35px;
+ margin-left: 170px;
+ width: 150px;
+ height: 70px;
+}
+
+.input-float{
+    text-align: start;
     width: 100%;
-    padding: 15px 2px 1px;
-    display: inline-block;
-    border: 0;
-    border-bottom: 2px solid #000060;
-    background-color: transparent; 
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+input{
+
+    color: #ffff;
+    background-color: #000000;
     outline: none;
-    min-width: 180px;
-    font-size: 25px;
-    transition: all .3s ease-out;
-    border-radius: 0;
-}
+    border:0;
+    border-radius: 3px;
 
-.label-float{
-    position: relative;
-    padding: 13px;
-    margin-top: 5%;
-    margin-bottom:5%;
-
-}
-
-.label-float input:focus{
-    border-bottom: 2px solid #000060;
-}
-
-.label-float label{
-    color: #000060;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-top: 13px;
-    transition: all .3s ease-out;
-}
-
-.label-float input:focus + label{
-    font-size: 13px;
-    margin-top: 0;
-    color: #000060;
-}
-
-.justify-center{
-    display: flex;
-    justify-content: center;    
+    width: 120px;
+    height: 20px;
+    padding: 3px 12px;
 }
 
 button{
-    padding: 2px 30px;
-    font-size: 20px;
-    background-color: transparent;
-    outline: none;
-    border: 1px solid;
-    border-radius: 10px;
-    transition: all .4s ease-out;
-    margin-bottom: 15px;
-    cursor: pointer;
+    margin-top: 18px;
+    margin-left: 55px;
+
+    width: 82px;
+    height: 20px;
+    padding: 2px;
+    font-size: 12px;
+
+    color: #ffffff;
+    background-color: #00000060;
+    border:none;
+    border-radius: 3px;
+    transition: all .3s ease-out;
 }
 
 button:hover{
-    background-color: #000020;
-    color: #fff;
-    transition: all .4s ease-out;
+    color: #000000;
+    background-color: #FFC100;
+    transition: all .3s ease-out;
 }
 
-p{
-    text-align: center;
-    font-size: 20px;
-    margin-top: 5px;
+
+img{
+    margin-top: 200px;
+    width: 120%;
 }
 
-a{
-    color: #3f19a7;
-    text-decoration: none;
-    cursor: pointer;
+footer{
+    width: 1000%;
+    height: 5   00px;
+    margin-top: -93px;
+    background-color: #FFC100;
 }
 
-a:hover{
-    color: rgb(119, 28, 28);
-
-}
