--- a/CSS/login.css
+++ b/CSS/login.css
@@ -7,25 +7,32 @@
     font-family: 'Ropa Sans';
 }
 
+body{
+    background-image:url(/home_page/Img/CORTADO.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 
 
 .container{
     display: flex;
     position: relative;
     justify-content: center;
-    width: 100%;
-    margin-top: 100px;
+    width: 110%;
+    margin-top: 60px;
+
+
 }
 
 .card_yelow{
-
- position:absolute;
- background-color: #FFC100;
- padding: 10px 70px 70px 10px;
- border-radius: 10px;
- margin-top: 15px;
- width: 190px;
- height: 150px;
+    position:absolute;
+    background-color: #FFC100;
+    padding: 10px 70px 70px 10px;
+    border-radius: 10px;
+    width: 220px;
+    height: 150px;
 }
 
 h1{
@@ -38,27 +45,28 @@ h1{
 hr{
     text-align: start;
     width: 80px;
-    border-top: 1px solid black;
+    border: 1px solid black;
     margin: 20px 9px 20px;
 }
 
-h2{
+.h2{
+    background-color: #ffc100;
+    color: #000000;
     font-size: 18px;
+    height: 50px;
     margin-left: 15px ;
     text-align: start;
 }
 
-
-
 .card_transparent{
- position: absolute;
- background-color:#00000080;
- padding: 10px 30px 110px 1px;
- border-radius: 10px;
- margin-top: 35px;
- margin-left: 170px;
- width: 150px;
- height: 70px;
+    position: absolute;
+    background-color:#00000080;
+    padding: 10px 30px 110px 1px;
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-left: 140px;
+    width: 179px;
+    height: 70px;
 }
 
 .input-float{
@@ -69,10 +77,8 @@ h2{
 }
 
 input{
-
     color: #ffff;
     background-color: #000000;
-    outline: none;
     border:0;
     border-radius: 3px;
 
@@ -95,6 +101,7 @@ button{
     border:none;
     border-radius: 3px;
     transition: all .3s ease-out;
+    cursor: pointer;
 }
 
 button:hover{
@@ -104,14 +111,129 @@ button:hover{
 }
 
 
-img{
-    margin-top: 200px;
-    width: 120%;
+
+
+
+/*----@media Responsivo----*/
+
+@media only screen and (min-width: 700px) {
+    body {
+        background-image:  url(/home_page/Img/Trip-pana.png);
+        background-color: #ffc100;
+        background-origin: content-box;
+        background-repeat: no-repeat;
+        background-position: 75% 60%;
+        background-size: 50%;
+
+
+
+    }
+
+    .container{
+        display: flex;
+        position: absolute;
+        justify-content: right;
+        margin: 150px;
+
+    }
+
+    .card_yelow{
+        position:absolute;
+        background-color: transparent;
+        padding: 10px;
+        border-radius: 10px;
+        width: 520px;
+        height: 750px;
+    }
+
+
+    h1{
+        text-align:center;
+        font-size: 70px;
+        margin-top: 40px;
+
+    }
+
+    hr{
+        width: 250px;
+        border: 1px solid black;
+        margin: 420px 140px 20px;
+    }
+
+    .h2{
+        background-color: rgb(238, 238, 221);
+        color: #000000;
+
+        font-size: 20px;
+        width: 200px;
+        height: 50px;
+        margin-left: 170\px;
+        padding: 5px;
+
+        border-radius: 20px;
+        text-align: center;
+        transition: all .4s ease-out;
+
+    }
+
+    .h2:hover{
+        background-color: #00000060;
+        color: #ffffff;
+        cursor: pointer;
+        transition: all .4s ease-out;
+    }
+
+    .card_transparent{
+        position: absolute;
+        background-color:#00000080;
+        padding: 25px 180px 250px 0px;
+        border-radius: 10px;
+        margin-top: 155px;
+        margin-left: 80px;
+        width: 220px;
+        height: 70px;
+    }
+
+
+    .input-float{
+        text-align: start;
+        width: 100%;
+        margin-left: 40px;
+        margin-top: 35px;
+    }
+
+    input{
+        color: #ffff;
+        background-color: #000000;
+        border:0;
+        border-radius: 5px;
+        font-size: 25px;
+        width: 290px;
+        height: 40px;
+        padding: 3px 20px;
+    }
+
+    button{
+        margin-top: 46px;
+        margin-left: 130px;
+
+
+        width: 150px;
+        height: 35px;
+        padding: 5px;
+        font-size: 20px;
+
+        color: #ffffff;
+        background-color: #00000060;
+        border:none;
+        border-radius: 5px;
+        transition: all .3s ease-out;
+    }
+
 }
 
-footer{
-    width: 1000%;
-    height: 500px;
-    margin-top: -93px;
-    background-color: #FFC100;
-}
+
+
+
+
+
